[project]
name = "open-feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "ruff>=0.15.20",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
